--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aftercare health center</title>
-    <link rel="stylesheet" href="main.css">
-<div class="search" > <img src="./images/Hamburger_icon.svg" alt=""></div></head>
+    <link rel="stylesheet" href="main.css"><head>
+<div class="search" > <img src="./images/Hamburger_icon.svg" alt=""></div>
 
     
 
